Updated data of languages

--- a/meteorology/src/locales/en/translation.json
+++ b/meteorology/src/locales/en/translation.json
@@ -11,7 +11,7 @@
   "curiosity_3": "🌞 UV radiation here is usually extremely high.",
   "footer_text": "Academic Project — Weather Station | Embedded Systems - UFMT",
   "control_engineering": "Control and Automation Engineering",
-  "computer_enginering": "Computer Engineering",
+  "computer_engineering": "Computer Engineering",
   "bruno_role": "Worked with Hardware",
   "gabriel_role": "Worked with Hardware",
   "kassio_role": "Worked on back-end",
